[package]
name = "our_economy_engine"                       
version = "0.2.1"
edition = "2024"                     
description = "Engine for the game Our Economy. Currently unusable, and progressing through rapid prototyping. Will often be half made, and be missing stuff." 
authors = ["Moneyga.me Community", "Mastercoder1323/Masterplayer833"]           
license = "MIT OR Apache-2.0"                        
readme = "README.md"                               
keywords = ["game", "economy", "simulation", "engine"]
categories = ["game-engines", "simulation"]          
include = ["src/**", "data/**", "Cargo.toml", "README.md"]  

[dependencies]
chrono = "0.4.41"
json = "0.12.4"
rusqlite = "0.36.0"

[build-dependencies]
walkdir = "2.4"
